@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>URL</key>
-	<string>http://thegibbon.org/contribute/</string>
+	<string>http://gibbonedu.org/contribute/</string>
 </dict>
 </plist>
