@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>URL</key>
-	<string>http://thegibbon.org/support/administrators/installing-gibbon/</string>
+	<string>http://gibbonedu.org/support/administrators/installing-gibbon/</string>
 </dict>
 </plist>
