@@ -1076,7 +1076,7 @@ else {
 							if ($informStudentEntry["email"]!="" AND $informStudentEntry["surname"]!="" AND $informStudentEntry["preferredName"]!="" AND $informStudentEntry["username"]!="" AND $informStudentEntry["password"]) {
 								$to = $informStudentEntry["email"];
 								$subject = "Welcome to " . $_SESSION[$guid]["systemName"] . " at " . $_SESSION[$guid]["organisationNameShort"] ;
-								$body = "Dear " . formatName("", $informStudentEntry["preferredName"], $informStudentEntry["surname"], "Student") . ",\n\nWelcome to " . $_SESSION[$guid]["systemName"] . ", " . $_SESSION[$guid]["organisationNameShort"] . "'s system for managing school information. You can access the system by going to " . $_SESSION[$guid]["absoluteURL"] . " and logging with your new username (" . $informStudentEntry["username"] . ") and password (" . $informStudentEntry["password"] . "). You can learn more about using " . $_SESSION[$guid]["systemName"] . " on the official support website (http://thegibbon.org/support/parents).\n\nIn order to maintain the security of your data, we highly recommend you change your password to something easy to remember but hard to guess. This can be done by using the Preferences page after logging in (top-right of the screen).\n\nPlease feel free to reply to this email should you have any questions.\n\n" . $_SESSION[$guid]["organisationAdministratorName"] . ",\n\n" . $_SESSION[$guid]["systemName"] . " Administrator";
+								$body = "Dear " . formatName("", $informStudentEntry["preferredName"], $informStudentEntry["surname"], "Student") . ",\n\nWelcome to " . $_SESSION[$guid]["systemName"] . ", " . $_SESSION[$guid]["organisationNameShort"] . "'s system for managing school information. You can access the system by going to " . $_SESSION[$guid]["absoluteURL"] . " and logging with your new username (" . $informStudentEntry["username"] . ") and password (" . $informStudentEntry["password"] . "). You can learn more about using " . $_SESSION[$guid]["systemName"] . " on the official support website (http://gibbonedu.org/support/parents).\n\nIn order to maintain the security of your data, we highly recommend you change your password to something easy to remember but hard to guess. This can be done by using the Preferences page after logging in (top-right of the screen).\n\nPlease feel free to reply to this email should you have any questions.\n\n" . $_SESSION[$guid]["organisationAdministratorName"] . ",\n\n" . $_SESSION[$guid]["systemName"] . " Administrator";
 								$headers = "From: " . $_SESSION[$guid]["organisationAdministratorEmail"] ;
 
 								if (mail($to, $subject, $body, $headers)) {
